# TIRT-Gazebo-Simple

./: LICENSE  README.md  README_zh-CN.md  README_zh-TW.md
tirt_gazebo/: CMakeLists.txt  package.xml
tirt_gazebo/launch/: turtlebot3_tirt.launch
tirt_gazebo/models/Dining_Table/: model.config  model.sdf
tirt_gazebo/models/Dining_Table/materials/scripts/: dining_table.material
tirt_gazebo/models/Fence/: model.config  model.sdf
tirt_gazebo/models/Laptop/: model.config  model.sdf
tirt_gazebo/models/Meal/: model.config  model.sdf
tirt_gazebo/models/Operational_Table/: model.config  model.sdf
tirt_gazebo/models/Operational_Table/materials/scripts/: operational_table.material
tirt_gazebo/models/Parking_Area1/: model.config  model.sdf
tirt_gazebo/models/Parking_Area1/materials/scripts/: parking_area1.material
tirt_gazebo/models/Parking_Area2/: model.config  model.sdf
tirt_gazebo/models/Parking_Area2/materials/scripts/: parking_area2.material
tirt_gazebo/models/Parking_Area3/: model.config  model.sdf
tirt_gazebo/models/Parking_Area3/materials/scripts/: parking_area3.material
tirt_gazebo/models/Parking_Area4/: model.config  model.sdf
tirt_gazebo/models/Parking_Area4/materials/scripts/: parking_area4.material
tirt_gazebo/models/Preparation_Area/: model.config  model.sdf
tirt_gazebo/models/Preparation_Area/materials/scripts/: preparation_area.material
tirt_gazebo/models/Preparation_Table/: model.config  model.sdf
tirt_gazebo/models/Start_Area/: model.config  model.sdf
tirt_gazebo/worlds/: tirt.world
(+2 files in other folders)
